# rusty-minder

./: Cargo.toml  README.md
src/: main.rs
src/anilist/: error.rs  mod.rs  searching.rs
src/bot/: bot.rs  mod.rs
src/commands/: subscribe.rs
src/nyaa/: feed.rs
src/response_module/: mod.rs  waiter.rs
